# BareWare

./: README.md  build.gradle
app/: build.gradle  proguard-rules.pro
app/gfx_face/: Cargo.toml  build.rs  fake-ld-arm.sh  fake-ld-armv7.sh  fake-ld.sh
app/gfx_face/.cargo/: config
app/gfx_face/src/: lib.rs
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/org/kinloch/colin/wear/bare/: AlarmService.kt  AlarmVibrator.kt  BareFace.kt  Boot.kt  CanvasWatchFaceService.kt  WatchFaceService.kt
app/src/main/kotlin/org/kinloch/colin/wear/bare/comms/: Constants.kt  MessageService.kt
app/src/main/kotlin/org/kinloch/colin/wear/bare/config/: ConfigActivity.kt
app/src/main/kotlin/org/kinloch/colin/wear/bare/gfx/: GfxFace.kt
app/src/main/res/drawable/: face_preview.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: preference_alarm.xml  preference_headers.xml  preference_other.xml
